# daily-story-editor

./: .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/src/: config.py  main.py  models.py  services.py
backend/src/pipeline/: background_removal.py  compositor.py  diffusion.py  prompt_builder.py  upscaler.py  utils.py
backend/src/services/: banner-regacy.py  banner-sd2.py  banner.py  banner_qwen.py  evaluation.py  persona_evaluation.py  storage.py  text.py
frontend/: README.md  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: PersonaEvaluationViewer.tsx  Step1Text.tsx  Step2Banner.tsx  Step2Evaluation.tsx  Step2Variation.tsx  Step3Banner.tsx  Step3PersonaEvaluation.tsx  Step3PersonaEvaluationOld.tsx  Step3Upload.tsx  Step4Banner.tsx  Step4Upload.tsx  Step5Upload.tsx  StepWizard.tsx
frontend/src/components/Step3PersonaEvaluation/: EvaluationResult.tsx  PersonaCard.tsx  PersonaForm.tsx  SliderInput.tsx  Step3PersonaEvaluation.tsx  constants.ts  index.ts  types.ts
frontend/src/data/: presetBackgrounds.tsx
frontend/src/hooks/: useBannerGeneration.ts  useInstagramUpload.ts  useTextGeneration.ts
frontend/src/pages/: App.tsx
frontend/src/types/: index.ts
